# sbc-game-dev

./: .clang-format  .gitignore  README.md  SBCGameDev.sln  SETUP.md
HelloLenna/: HelloLenna.sln
HelloLenna/HelloLenna/: CMakeLists.txt  HelloLenna.cpp  HelloLenna.vgdbcmake  MyFiles.h
HelloTriangle/: HelloTriangle.sln
HelloTriangle/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.vgdbcmake
SBCGameDev/: CMakeLists.txt  SBCGameDev.vgdbcmake
SBCGameDev/DoubleBuffer/: CMakeLists.txt  DoubleBuffer.cpp  Input.cpp  Input.h  MyFiles.cpp  MyFiles.h  Surface.cpp  Surface.h
SBCGameDev/HelloLenna/: CMakeLists.txt  MyFiles.cpp
SBCGameDev/HelloTriangle/: CMakeLists.txt  HelloTriangle.cpp
SBCGameDev/PhotoFrame/: CMakeLists.txt  MyFiles.cpp  MyFiles.h  PhotoFrame.cpp
